--- a/Wit.Tests/Wit.Tests.csproj
+++ b/Wit.Tests/Wit.Tests.csproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DownloaderTests.cs" />
+    <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -137,6 +138,11 @@
       <Project>{eb8da7d5-8b77-4114-be05-5a2f5469fde2}</Project>
       <Name>Wit</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="HtmlAgilityPack.Metro">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.5\lib\winrt45\HtmlAgilityPack.Metro.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
