--- a/Wit/Wit.csproj
+++ b/Wit/Wit.csproj
@@ -107,6 +107,11 @@
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="HtmlAgilityPack.Metro">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.5\lib\winrt45\HtmlAgilityPack.Metro.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
   </PropertyGroup>
