--- a/Piwo/Piwo.csproj
+++ b/Piwo/Piwo.csproj
@@ -168,6 +168,12 @@
       <HintPath>..\packages\NUnit.2.6.1\lib\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wit\Wit.csproj">
+      <Project>{eb8da7d5-8b77-4114-be05-5a2f5469fde2}</Project>
+      <Name>Wit</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
   </PropertyGroup>
